# protfid

./: README.md  pyproject.toml
protfid/: fid.py  residue_constants.py
